GNOME Bugzilla – Bug 780764
video-converter: fix scaler leak
Last modified: 2017-03-31 15:20:04 UTC
Created attachment 349044 [details] [review] video-converter: fix scaler leak
Review of attachment 349044 [details] [review]: ::: gst-libs/gst/video/video-converter.c @@ +2546,2 @@ for (i = 0; i < 4; i++) { + for (j = 0; j < n_threads; j++) { There are not as many scalers as there are CPUs. This is actually a bug in setup_scale(), it should use the number of threads as configured on convert->conversion_runner
Created attachment 349054 [details] [review] video-converter: fix scaler leak
commit 32ef8f54d4728da465bfd20456e22d182a822570 Author: Vincent Penquerc'h <vincent.penquerch@collabora.co.uk> Date: Fri Mar 31 13:43:52 2017 +0100 video-converter: fix scaler leak https://bugzilla.gnome.org/show_bug.cgi?id=780764