video-converter: fix scaler leak

https://bugzilla.gnome.org/show_bug.cgi?id=780764